# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import postsRouter from "./posts";
 import commentsRouter from "./comments";
 import mediaRouter from "./media";
 import usersRouter from "./users";
+import siteSettingsRouter from "./site-settings";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use(postsRouter);
 router.use(commentsRouter);
 router.use(mediaRouter);
 router.use(usersRouter);
+router.use(siteSettingsRouter);
 
 export default router;
