# lib/db/src/schema/index.ts
@@ -5,3 +5,4 @@ export * from "./accounts";
 export * from "./sessions";
 export * from "./verification-tokens";
 export * from "./reactions";
+export * from "./site-settings";
